--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@nx/next": "17.1.2",
+    "jotai": "^2.5.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
