--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@nx/next": "17.1.2",
     "jotai": "^2.5.1",
+    "jotai-xstate": "^0.3.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "xstate": "^4.38.3"
   },
   "devDependencies": {
     "@nx/eslint": "17.1.2",
