--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0",
-    "xstate": "^4.38.3"
+    "xstate": "^4.38.3",
+    "youtube-sr": "^4.3.9"
   },
   "devDependencies": {
     "@nx/eslint": "17.1.2",
