--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-string-format": "^1.0.1",
     "tslib": "^2.3.0",
     "xstate": "^4.38.3",
-    "youtube-sr": "^4.3.9",
-    "react-string-format": "^1.0.1"
+    "youtube-sr": "^4.3.9"
   },
   "devDependencies": {
     "@nx/eslint": "17.1.2",
@@ -30,6 +30,10 @@
     "@nx/workspace": "17.1.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
