--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "color-thief-react": "^2.1.0",
     "jotai": "^2.5.1",
     "jotai-xstate": "^0.3.0",
+    "lucide-react": "^0.292.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -62,4 +63,3 @@
     "typescript": "~5.2.2"
   }
 }
-
