--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@nx/next": "17.1.2",
+    "clsx": "^2.0.0",
     "color-thief-react": "^2.1.0",
     "jotai": "^2.5.1",
     "jotai-xstate": "^0.3.0",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-string-format": "^1.0.1",
+    "tailwind-merge": "^2.0.0",
     "tslib": "^2.3.0",
     "xstate": "^4.38.3",
     "youtube-sr": "^4.3.9"
