--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@distube/ytdl-core": "^4.13.3",
     "@nx/next": "17.1.2",
     "clsx": "^2.0.0",
     "color-thief-react": "^2.1.0",
@@ -18,6 +19,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hifi": "^2.2.1",
     "react-string-format": "^1.0.1",
     "tailwind-merge": "^2.0.0",
     "tslib": "^2.3.0",
@@ -42,6 +44,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "@types/tough-cookie": "^4.0.5",
     "@types/youtube": "^0.0.50",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
