--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jotai": "^2.5.1",
     "jotai-xstate": "^0.3.0",
     "lucide-react": "^0.292.0",
+    "media-chrome": "^1.5.3",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
