--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nx/js": "17.1.2",
     "@nx/react": "17.1.2",
     "@nx/workspace": "17.1.2",
+    "@swc-jotai/react-refresh": "^0.1.0",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@tailwindcss/aspect-ratio": "^0.4.2",
