--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-string-format": "^1.0.1",
+    "realm-web": "^2.0.0",
     "sharp": "^0.32.6",
     "tailwind-merge": "^2.0.0",
     "tslib": "^2.3.0",
