--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@distube/ytdl-core": "^4.13.3",
     "@nx/next": "17.1.2",
+    "butterchurn": "^2.6.7",
+    "butterchurn-presets": "^2.4.7",
     "clsx": "^2.0.0",
     "color-thief-react": "^2.1.0",
     "jotai": "^2.5.1",
     "jotai-xstate": "^0.3.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.292.0",
     "media-chrome": "^1.5.3",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-measure": "^2.5.2",
     "react-string-format": "^1.0.1",
     "realm-web": "^2.0.0",
     "sharp": "^0.32.6",
