--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@distube/ytdl-core": "^4.13.3",
+    "@headlessui/react": "^1.7.17",
     "@nx/next": "17.1.2",
     "butterchurn": "^2.6.7",
     "butterchurn-presets": "^2.4.7",
