--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node": "18.14.2",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "@types/spotify-web-playback-sdk": "^0.1.19",
     "@types/tough-cookie": "^4.0.5",
     "@types/youtube": "^0.0.50",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
